chore: migrate APIM Portal REST API resource tests to JUnit 5